--- a/Project POMO/data scraping/05 modify model test 2.ipynb
+++ b/Project POMO/data scraping/05 modify model test 2.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -54,7 +54,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -419,7 +419,7 @@
        "4         0  "
       ]
      },
-     "execution_count": 17,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -432,7 +432,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -451,7 +451,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -516,7 +516,300 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 8,
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>tempC_avg(0C)</th>\n",
+       "      <th>Relative humidity_avg(%)</th>\n",
+       "      <th>windspeedKmph_avg(Km/h)</th>\n",
+       "      <th>pressureMB_avg</th>\n",
+       "      <th>precipMM_avg(mm)</th>\n",
+       "      <th>weatherDesc</th>\n",
+       "      <th>Sunshine Hours</th>\n",
+       "      <th>%_soil_moisure</th>\n",
+       "      <th>Type of Disease (Bacterial Blight/Telya)</th>\n",
+       "      <th>Anthracnose</th>\n",
+       "      <th>Fruit Spot/ Rot</th>\n",
+       "      <th>Fusarium Wilt</th>\n",
+       "      <th>Fruit Borer / Blight Blora</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>50</th>\n",
+       "      <td>29</td>\n",
+       "      <td>17</td>\n",
+       "      <td>6</td>\n",
+       "      <td>1013</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>4</td>\n",
+       "      <td>10.1</td>\n",
+       "      <td>41</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>51</th>\n",
+       "      <td>28</td>\n",
+       "      <td>27</td>\n",
+       "      <td>7</td>\n",
+       "      <td>1012</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>4</td>\n",
+       "      <td>10.1</td>\n",
+       "      <td>40</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>52</th>\n",
+       "      <td>26</td>\n",
+       "      <td>30</td>\n",
+       "      <td>9</td>\n",
+       "      <td>1012</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>5</td>\n",
+       "      <td>10.1</td>\n",
+       "      <td>41</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>53</th>\n",
+       "      <td>24</td>\n",
+       "      <td>41</td>\n",
+       "      <td>7</td>\n",
+       "      <td>1011</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>5</td>\n",
+       "      <td>10.1</td>\n",
+       "      <td>41</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>54</th>\n",
+       "      <td>26</td>\n",
+       "      <td>32</td>\n",
+       "      <td>5</td>\n",
+       "      <td>1011</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>5</td>\n",
+       "      <td>10.1</td>\n",
+       "      <td>41</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>145</th>\n",
+       "      <td>32</td>\n",
+       "      <td>39</td>\n",
+       "      <td>10</td>\n",
+       "      <td>1007</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>5</td>\n",
+       "      <td>10.4</td>\n",
+       "      <td>32</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>146</th>\n",
+       "      <td>32</td>\n",
+       "      <td>41</td>\n",
+       "      <td>12</td>\n",
+       "      <td>1006</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>5</td>\n",
+       "      <td>6.2</td>\n",
+       "      <td>34</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>147</th>\n",
+       "      <td>31</td>\n",
+       "      <td>53</td>\n",
+       "      <td>9</td>\n",
+       "      <td>1008</td>\n",
+       "      <td>0.233333</td>\n",
+       "      <td>3</td>\n",
+       "      <td>6.2</td>\n",
+       "      <td>40</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>148</th>\n",
+       "      <td>30</td>\n",
+       "      <td>55</td>\n",
+       "      <td>9</td>\n",
+       "      <td>1009</td>\n",
+       "      <td>0.100000</td>\n",
+       "      <td>3</td>\n",
+       "      <td>6.2</td>\n",
+       "      <td>45</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>149</th>\n",
+       "      <td>30</td>\n",
+       "      <td>56</td>\n",
+       "      <td>10</td>\n",
+       "      <td>1009</td>\n",
+       "      <td>0.033333</td>\n",
+       "      <td>3</td>\n",
+       "      <td>6.2</td>\n",
+       "      <td>45</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>100 rows × 13 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "     tempC_avg(0C)  Relative humidity_avg(%)  windspeedKmph_avg(Km/h)  \\\n",
+       "50              29                        17                        6   \n",
+       "51              28                        27                        7   \n",
+       "52              26                        30                        9   \n",
+       "53              24                        41                        7   \n",
+       "54              26                        32                        5   \n",
+       "..             ...                       ...                      ...   \n",
+       "145             32                        39                       10   \n",
+       "146             32                        41                       12   \n",
+       "147             31                        53                        9   \n",
+       "148             30                        55                        9   \n",
+       "149             30                        56                       10   \n",
+       "\n",
+       "     pressureMB_avg  precipMM_avg(mm)  weatherDesc  Sunshine Hours  \\\n",
+       "50             1013          0.000000            4            10.1   \n",
+       "51             1012          0.000000            4            10.1   \n",
+       "52             1012          0.000000            5            10.1   \n",
+       "53             1011          0.000000            5            10.1   \n",
+       "54             1011          0.000000            5            10.1   \n",
+       "..              ...               ...          ...             ...   \n",
+       "145            1007          0.000000            5            10.4   \n",
+       "146            1006          0.000000            5             6.2   \n",
+       "147            1008          0.233333            3             6.2   \n",
+       "148            1009          0.100000            3             6.2   \n",
+       "149            1009          0.033333            3             6.2   \n",
+       "\n",
+       "     %_soil_moisure  Type of Disease (Bacterial Blight/Telya)  Anthracnose  \\\n",
+       "50               41                                         1            0   \n",
+       "51               40                                         1            0   \n",
+       "52               41                                         0            0   \n",
+       "53               41                                         0            0   \n",
+       "54               41                                         0            0   \n",
+       "..              ...                                       ...          ...   \n",
+       "145              32                                         0            0   \n",
+       "146              34                                         0            0   \n",
+       "147              40                                         1            0   \n",
+       "148              45                                         1            1   \n",
+       "149              45                                         1            1   \n",
+       "\n",
+       "     Fruit Spot/ Rot  Fusarium Wilt  Fruit Borer / Blight Blora  \n",
+       "50                 0              0                           0  \n",
+       "51                 0              0                           0  \n",
+       "52                 0              0                           0  \n",
+       "53                 0              0                           0  \n",
+       "54                 0              0                           0  \n",
+       "..               ...            ...                         ...  \n",
+       "145                0              0                           0  \n",
+       "146                0              0                           0  \n",
+       "147                0              0                           0  \n",
+       "148                0              0                           0  \n",
+       "149                0              0                           0  \n",
+       "\n",
+       "[100 rows x 13 columns]"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df[['tempC_avg(0C)', 'Relative humidity_avg(%)', 'windspeedKmph_avg(Km/h)', 'pressureMB_avg', \n",
+    "    'precipMM_avg(mm)', 'weatherDesc', 'Sunshine Hours', '%_soil_moisure',\n",
+    "    'Type of Disease (Bacterial Blight/Telya)', 'Anthracnose', 'Fruit Spot/ Rot', \n",
+    "    'Fusarium Wilt', 'Fruit Borer / Blight Blora']].iloc[50:150]\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -561,7 +854,7 @@
    "cell_type": "code",
    "execution_count": 36,
    "metadata": {
-    "scrolled": false
+    "scrolled": true
    },
    "outputs": [
     {
