--- a/Suresh Interview Project/Part 1/01 .ipynb
+++ b/Suresh Interview Project/Part 1/01 .ipynb
@@ -25056,6 +25056,138 @@
    "metadata": {},
    "outputs": [],
    "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Resume Classification"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 196,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import numpy as np\n",
+    "import pandas as pd\n",
+    "\n",
+    "import matplotlib.pyplot as plt\n",
+    "import seaborn as sns\n",
+    "\n",
+    "from sklearn.naive_bayes import MultinomialNB\n",
+    "from sklearn.multiclass import OneVsRestClassifier\n",
+    "\n",
+    "from sklearn import metrics\n",
+    "from sklearn.metrics import accuracy_score\n",
+    "from pandas.plotting import scatter_matrix\n",
+    "\n",
+    "from sklearn.neighbors import KNeighborsClassifier\n",
+    "\n",
+    "import warnings\n",
+    "warnings.filterwarnings('ignore')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 200,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Category</th>\n",
+       "      <th>Resume</th>\n",
+       "      <th>cleaned_resume</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>Data Science</td>\n",
+       "      <td>Skills * Programming Languages: Python (pandas...</td>\n",
+       "      <td></td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>Data Science</td>\n",
+       "      <td>Education Details \\r\\nMay 2013 to May 2017 B.E...</td>\n",
+       "      <td></td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>Data Science</td>\n",
+       "      <td>Areas of Interest Deep Learning, Control Syste...</td>\n",
+       "      <td></td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>Data Science</td>\n",
+       "      <td>Skills â¢ R â¢ Python â¢ SAP HANA â¢ Table...</td>\n",
+       "      <td></td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>Data Science</td>\n",
+       "      <td>Education Details \\r\\n MCA   YMCAUST,  Faridab...</td>\n",
+       "      <td></td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "       Category                                             Resume  \\\n",
+       "0  Data Science  Skills * Programming Languages: Python (pandas...   \n",
+       "1  Data Science  Education Details \\r\\nMay 2013 to May 2017 B.E...   \n",
+       "2  Data Science  Areas of Interest Deep Learning, Control Syste...   \n",
+       "3  Data Science  Skills â¢ R â¢ Python â¢ SAP HANA â¢ Table...   \n",
+       "4  Data Science  Education Details \\r\\n MCA   YMCAUST,  Faridab...   \n",
+       "\n",
+       "  cleaned_resume  \n",
+       "0                 \n",
+       "1                 \n",
+       "2                 \n",
+       "3                 \n",
+       "4                 "
+      ]
+     },
+     "execution_count": 200,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "resumeDataSet = pd.read_csv('dataset/UpdatedResumeDataSet.csv' ,encoding='utf-8')\n",
+    "resumeDataSet['cleaned_resume'] = ''\n",
+    "resumeDataSet.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
