--- a/Suresh Interview Project/Project Interview/Part 0/Job Description Similarity.ipynb
+++ b/Suresh Interview Project/Project Interview/Part 0/Job Description Similarity.ipynb
@@ -15,6 +15,7 @@
    "source": [
     "# https://www.youtube.com/watch?v=bkigzpBLN6o&t=11s\n",
     "# https://www.youtube.com/watch?v=2vD6EAjhl54\n",
+    "# https://www.youtube.com/watch?v=m_CooIRM3UI&t=2s\n",
     "# !pip install docx2txt"
    ]
   },
@@ -146,20 +147,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "<spacy.lang.en.English at 0x28374028d68>"
-      ]
-     },
-     "execution_count": 5,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "# lib's\n",
     "\n",
@@ -174,7 +164,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -189,7 +179,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -200,65 +190,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "{'name': 'KIRAN KRUSHNAKANT MUNGEKAR mungekarkiran05@gmail.com',\n",
-       " 'email': 'mungekarkiran05@gmail.com',\n",
-       " 'mobile_number': '8108412112',\n",
-       " 'skills': ['Excel',\n",
-       "  'Html',\n",
-       "  'Postgresql',\n",
-       "  'Api',\n",
-       "  'Presentation',\n",
-       "  'Machine learning',\n",
-       "  'Time management',\n",
-       "  'Ai',\n",
-       "  'Database',\n",
-       "  'Python',\n",
-       "  'Rest',\n",
-       "  'Ms excel',\n",
-       "  'Nosql',\n",
-       "  'C',\n",
-       "  'Visual',\n",
-       "  'Mysql',\n",
-       "  'Mobile',\n",
-       "  'Css',\n",
-       "  'Statistical analysis',\n",
-       "  'Java',\n",
-       "  'Flask',\n",
-       "  'Engineering',\n",
-       "  'Research',\n",
-       "  'Prototype',\n",
-       "  'System',\n",
-       "  'Sales',\n",
-       "  'Analysis',\n",
-       "  'Html5',\n",
-       "  'Beautifulsoup',\n",
-       "  'Jupyter',\n",
-       "  'Selenium',\n",
-       "  'Design',\n",
-       "  'Django'],\n",
-       " 'college_name': None,\n",
-       " 'degree': ['Master of Engineering',\n",
-       "  'M.E.)',\n",
-       "  'B.E.)',\n",
-       "  'Bachelor of Engineering'],\n",
-       " 'designation': ['Data Analyst'],\n",
-       " 'experience': None,\n",
-       " 'company_names': ['Smart Car'],\n",
-       " 'no_of_pages': None,\n",
-       " 'total_experience': 0}"
-      ]
-     },
-     "execution_count": 8,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "data = ResumeParser(filed).get_extracted_data()\n",
     "# print(data)\n",
@@ -267,17 +201,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "{'name': 'KIRAN KRUSHNAKANT MUNGEKAR mungekarkiran05@gmail.com', 'email': 'mungekarkiran05@gmail.com', 'mobile_number': '8108412112', 'skills': ['Excel', 'Html', 'Postgresql', 'Api', 'Presentation', 'Machine learning', 'Time management', 'Ai', 'Database', 'Python', 'Rest', 'Ms excel', 'Nosql', 'C', 'Visual', 'Mysql', 'Mobile', 'Css', 'Statistical analysis', 'Java', 'Flask', 'Engineering', 'Research', 'Prototype', 'System', 'Sales', 'Analysis', 'Html5', 'Beautifulsoup', 'Jupyter', 'Selenium', 'Design', 'Django'], 'college_name': None, 'degree': ['Master of Engineering', 'M.E.)', 'B.E.)', 'Bachelor of Engineering'], 'designation': ['Data Analyst'], 'experience': None, 'company_names': ['Smart Car'], 'no_of_pages': None, 'total_experience': 0}\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "try:\n",
     "    doc = Document()\n",
@@ -293,7 +219,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -311,11 +237,289 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "# https://www.youtube.com/watch?v=hqu5EYMLCUw"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Calculating Text Similarity in Python with NLP"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# !python -m spacy download en_core_web_lg\n",
+    "# !python -m spacy download en_core_web_md"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import spacy"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "nlp = spacy.load(\"en_core_web_lg\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(<spacy.lexeme.Lexeme at 0x14a338b01f8>,\n",
+       " <spacy.lexeme.Lexeme at 0x14a1b82e0d8>)"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "w1 = 'red'\n",
+    "w2 = 'blue'\n",
+    "\n",
+    "w1 = nlp.vocab[w1]\n",
+    "w2 = nlp.vocab[w2]\n",
+    "\n",
+    "w1, w2"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.8438412"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "w1.similarity(w2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "s1 = nlp(\"I believe in the god of the Bible\")\n",
+    "s2 = nlp(\"I trust in a higher power of chrisrianity\")\n",
+    "s3 = nlp(\"This weekend John will drink a beer\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.8469442263923321"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "s1.similarity(s2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.7182935290755542"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "s1.similarity(s3)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.692211795614116"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "s2.similarity(s3)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "s1 = nlp(\"Machine learning brings out the power of data in new ways, such as Facebook suggesting articles in your feed.\")\n",
+    "s2 = nlp(\"This guide explains what machine learning is, how it is related to artificial intelligence, how it works and why it matters.\")\n",
+    "s3 = nlp(\"Web development is the work involved in developing a website for the Internet (World Wide Web) or an intranet (a private network).\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "''"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "s1_verbs = \"\".join([token.lemma_ for token in s1 if token.pos == 'VERB'])\n",
+    "s1_verbs"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "s1_verbs = \"\".join([token.lemma_ for token in s1 if token.pos == 'VERB'])\n",
+    "s1_adjs = \"\".join([token.lemma_ for token in s1 if token.pos == 'ADJ'])\n",
+    "s1_nouns = \"\".join([token.lemma_ for token in s1 if token.pos == 'NOUN'])\n",
+    "\n",
+    "s2_verbs = \"\".join([token.lemma_ for token in s2 if token.pos == 'VERB'])\n",
+    "s2_adjs = \"\".join([token.lemma_ for token in s2 if token.pos == 'ADJ'])\n",
+    "s2_nouns = \"\".join([token.lemma_ for token in s2 if token.pos == 'NOUN'])\n",
+    "\n",
+    "s3_verbs = \"\".join([token.lemma_ for token in s3 if token.pos == 'VERB'])\n",
+    "s3_adjs = \"\".join([token.lemma_ for token in s3 if token.pos == 'ADJ'])\n",
+    "s3_nouns = \"\".join([token.lemma_ for token in s3 if token.pos == 'NOUN'])\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(1.0, 1.0, 1.0)"
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "nlp(s1_verbs).similarity(nlp(s2_verbs)), nlp(s1_verbs).similarity(nlp(s2_verbs)), nlp(s2_verbs).similarity(nlp(s3_verbs))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(1.0, 1.0, 1.0)"
+      ]
+     },
+     "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "nlp(s1_adjs).similarity(nlp(s2_adjs)), nlp(s1_adjs).similarity(nlp(s2_adjs)), nlp(s2_adjs).similarity(nlp(s3_adjs))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(1.0, 1.0, 1.0)"
+      ]
+     },
+     "execution_count": 18,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "nlp(s1_nouns).similarity(nlp(s2_nouns)), nlp(s1_nouns).similarity(nlp(s2_nouns)), nlp(s2_nouns).similarity(nlp(s3_nouns))"
    ]
   },
   {
