18102022 - added word cloud

--- a/Suresh Interview Project/Project Interview/Part 0/Job Description Similarity.ipynb
+++ b/Suresh Interview Project/Project Interview/Part 0/Job Description Similarity.ipynb
@@ -530,6 +530,172 @@
    "source": []
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Word Cloud"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# !pip install wikipedia\n",
+    "# !pip install wordcloud"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import numpy as np\n",
+    "import sys\n",
+    "\n",
+    "import wikipedia\n",
+    "from wordcloud import WordCloud, STOPWORDS\n",
+    "from PIL import Image"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['Shiva Star',\n",
+       " 'The League',\n",
+       " 'Nilakanta (Hinduism)',\n",
+       " 'Baidyanath Temple',\n",
+       " 'Karaikal Kailasanathar Temple',\n",
+       " 'Vishnu Sahasranama',\n",
+       " 'King Ezekiel',\n",
+       " 'RRR (soundtrack)',\n",
+       " 'Godavari River',\n",
+       " 'Varanasi']"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "title = \"Load Shiva\"\n",
+    "keywords = wikipedia.search(title)\n",
+    "keywords"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<WikipediaPage 'Shiva Star'>"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "page = wikipedia.page(keywords[0])\n",
+    "page"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'Shiva Star, originally just SHIVA, is a high-powered pulsed-power research device located at the Air Force Research Laboratory on the Kirtland Air Force Base in Albuquerque, New Mexico. The device was originally built in the 1970s for high-power X-ray research, was later re-directed to studies for the Strategic Defense Initiative (SDI), and is now being used for magnetized target fusion research. Shiva Star was named after the Hindu god Shiva, partly because its prototype originally had four \"arms\"; it later got six \"arms\".\\n\\n\\n== Topics of research ==\\n\\n\\n=== Spacecraft propulsion ===\\nResearch at Princeton University in using Z-Pinch devices as a potential space propulsion device led to the exploration of the resulting x-ray production. This led directly to the original SHIVA effort in 1971. In these experiments a thin foil of a \"high-Z\" metal (lead, uranium, etc.) was rapidly compressed magnetically by dumping the output of capacitor banks into magnetic coils. As it was first built in 1974, SHIVA I consisted of four banks of capacitors arranged in a cross shape with the experimental chamber in the middle. The capacitors held 1 MJ at 100 kV, able to discharge them in 1 μs. Early experiments were hampered by problems with the implosion, but by 1976 successful implosions were being carried out. The capacitor banks were then upgraded to 1.9 MJ at 120 kV in 1979, becoming Shiva II. Another upgrade followed in 1982, adding two more capacitor banks, thereby changing the shape from a cross to a star, resulting in the current Shiva Star device. Shiva Star was also used as a dense plasma focus driver in the mid-80s, and as an experimental magnetic driver for conventional projectiles in the late-80s.\\n\\n\\n=== Plasma weapon ===\\n\\nShiva Star was also used to develop an experimental weapon known as MARAUDER for the SDI effort between 1989 and 1995. The idea appears to have been to create compact toroids of high-density plasma that would be ejected from the device using a massive magnetic pulse. The plasma projectiles would be shot at a speed expected to be 3000 km/s in 1995 and 10,000 km/s (3.3% of the speed of light) by 2000. A shot has the energy of 2,27 kg of TNT exploding.  Doughnut-shaped rings of plasma and balls of lightning exploded with devastating thermal and mechanical effects when hitting their target  and produced pulse of electromagnetic radiation that could scramble electronics, the energy would shower the interior of the target with high-energy x-rays that would potentially destroy the electronics inside. The tests cost a few million dollars a year. The project became classified, and no information about the fate of the project has been published after 1995.\\n\\n\\n=== Fusion ===\\nShiva Star was most recently revived for work in fusion research. A relatively new technique, magnetized target fusion, compresses a small plasma load with an imploding metal foil. Shiva Star\\'s 10 MJ capacitor banks were perfect for this role, and starting in 2007 the new FRCHX experiment has been using Shiva Star with 1 mm thick aluminium foil that is accelerated to about 5 km/s.\\n\\n\\n== See also ==\\nDresden High Magnetic Field Laboratory\\nLINUS (fusion experiment)\\nMagnetized Target Fusion\\nNova (laser)\\n\\n\\n== References =='"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "content = page.content\n",
+    "content"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "stopwords = set(STOPWORDS)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "wordcloud = WordCloud(background_color = 'white',\n",
+    "                     max_words = 300,\n",
+    "                     stopwords = stopwords)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<wordcloud.wordcloud.WordCloud at 0x289fb1459b0>"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "wordcloud.generate(content)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<wordcloud.wordcloud.WordCloud at 0x289fb1459b0>"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "wordcloud.to_file(\"output.jpg\")"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
