modified with new dataset

--- a/Suresh Interview Project/Project OCR/Project Invoice.ipynb
+++ b/Suresh Interview Project/Project OCR/Project Invoice.ipynb
@@ -88,7 +88,22 @@
    ],
    "source": [
     "# !pip install torch torchvision torchaudio\n",
-    "# !pip install easyocr"
+    "# !pip install easyocr\n",
+    "\n",
+    "# https://www.youtube.com/watch?v=ZVKaWPW9oQY&t=3s\n",
+    "# https://github.com/nicknochnack/EasyOCR/blob/main/OCR%20Basics-EasyOCR.ipynb\n",
+    "# https://www.youtube.com/watch?v=ic4chj-iMaI&t=294s\n",
+    "# https://www.youtube.com/watch?v=oyqNdcbKhew \n",
+    "# https://www.youtube.com/watch?v=owiqdzha_DE\n",
+    "# https://www.youtube.com/watch?v=nnH55-zD38I\n",
+    "# https://www.youtube.com/watch?v=aGcLSH9TTLU&t=1s\n",
+    "# https://www.youtube.com/watch?v=6FGIPpvYBZw\n",
+    "# \n",
+    "\n",
+    "\n",
+    "\n",
+    "# https://www.youtube.com/watch?v=y1ZrOs9s2QA\n",
+    "# https://www.youtube.com/watch?v=NWeBJgVue9c\n"
    ]
   },
   {
